package jp.rk.decopy;

public class DecopyInputController {
	private DecopyInputController(){}

}
