package jp.rk.decopy.UI;

import java.awt.*;


public class DecopyInputFrame extends Frame {	

}